tests/inputs/invalid/map-06.js
const map = [
    ['','','','','','x','-','B'],
    ['','','','','','','','|'],
    ['@','-','-','A','-','-','-','+'],
    ['','','','','','','','|'],
    ['','','x','+','','','','C'],
    ['','','','|','','','','|'],
    ['','','','+','-','-','-','|']
];

module.exports = map;
